Fix Pipeline
Addresses: https://gitlab.com/sosy-lab/software/cpachecker/-/pipelines/2591930137